--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,7 @@ android {
         applicationId "com.codeGeekerz.project.pollutionTracker"
         minSdkVersion 15
         targetSdkVersion 23
-        versionCode 5
+        versionCode 6
         versionName "1.0"
     }
     buildTypes {
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.1.1'
     compile 'org.achartengine:achartengine:1.2.0'
     compile 'pl.pawelkleczkowski.customgauge:CustomGauge:1.0.1'
+    compile 'com.google.code.gson:gson:2.6.2'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
